fix terrilble mistake

--- a/index.html
+++ b/index.html
@@ -2506,7 +2506,7 @@
         </div>
 
         <button id="labelAlign" data-tip="将文本路径转换为直线" class="icon-resize-horizontal"></button>
-        <button id="labelLegend" data-tip="编辑此标签的免费文本说明(图例)" class="icon-edit"></button>
+        <button id="labelLegend" data-tip="编辑此标签的自由文本说明(图例)" class="icon-edit"></button>
         <button
           id="labelRemoveSingle"
           data-tip="编辑此标签的自由文本描述（图例）"
@@ -3275,7 +3275,7 @@
           <button id="burgEditEmblem" data-tip="编辑徽章" class="icon-shield-alt"></button>
           <button id="burgToggleMFCGMap" data-tip="切换 MFCG 地图" class="icon-map"></button>
           <button id="burgRelocate" data-tip="重新安置城市区" class="icon-target"></button>
-          <button id="burglLegend" data-tip="编辑免费的文字说明(图例)为这个城市" class="icon-edit"></button>
+          <button id="burglLegend" data-tip="编辑自由的文字说明(图例)为这个城市" class="icon-edit"></button>
           <button id="burgLock" class="icon-lock-open" onmouseover="showElementLockTip(event)"></button>
           <button
             id="burgRemove"
@@ -5135,7 +5135,7 @@
         </div>
       </div>
 
-      <div id="burgs预览" class="dialog stable" style="display: none">
+      <div id="burgsOverview" class="dialog stable" style="display: none">
         <div id="burgsHeader" class="header" style="grid-template-columns: 8em 6em 6em 7em 7em 4em 2em">
           <div
             data-tip="单击此处可按城市名进行排序"
@@ -5207,7 +5207,7 @@
         </div>
       </div>
 
-      <div id="rivers预览" class="dialog stable" style="display: none">
+      <div id="riversOverview" class="dialog stable" style="display: none">
         <div id="riversHeader" class="header" style="grid-template-columns: 9em 4em 6em 6em 5em 9em">
           <div data-tip="按河流名称排序" class="sortable alphabetically" data-sortby="name">
             河流&nbsp;
@@ -5264,7 +5264,7 @@
         </div>
       </div>
 
-      <div id="military预览" class="dialog stable" style="display: none">
+      <div id="militaryOverview" class="dialog stable" style="display: none">
         <div id="militaryHeader" class="header">
           <div data-tip="国家名称。单击以进行排序" class="sortable alphabetically" data-sortby="state">
             国家&nbsp;
@@ -5339,7 +5339,7 @@
         </div>
       </div>
 
-      <div id="regiments预览" class="dialog stable" style="display: none">
+      <div id="regimentsOverview" class="dialog stable" style="display: none">
         <div id="regimentsHeader" class="header">
           <div data-tip="国家名称。单击以进行排序" class="sortable alphabetically" data-sortby="state">
             国家&nbsp;
@@ -5407,7 +5407,7 @@
         </div>
       </div>
 
-      <div id="markers预览" class="dialog stable" style="display: none">
+      <div id="markersOverview" class="dialog stable" style="display: none">
         <div id="markersHeader" class="header" style="grid-template-columns: 15em 1em 3em">
           <div data-tip="单击此处可按标记类型排序" class="sortable alphabetically" data-sortby="type">
             类型&nbsp;
@@ -5437,7 +5437,7 @@
         <div id="markersBottom">
           <button id="markersOverviewRefresh" data-tip="刷新“概述”屏幕" class="icon-cw"></button>
           <button
-            id="markersAddFrom预览"
+            id="markersAddFromOverview"
             data-tip="添加一个新标记。按住 Shift 添加多个"
             class="icon-plus"
           ></button>
