fix typo and mistakes

--- a/index.html
+++ b/index.html
@@ -4483,8 +4483,8 @@
         <div data-tip="选择类型名称">
           <div data-tip="省类名" class="label">类型名称:</div>
           <select id="provinceNameEditorSelectForm" style="display: inline-block; width: 11em; height: 1.645em">
-            <option value="">blank</option>
-            <option value="Area">Area=面积</option>
+            <option value="">blank=无类别</option>
+            <option value="Area">Area=地区</option>
             <option value="Autonomy">Autonomy=自治</option>
             <option value="Barony">Barony=男爵领地</option>
             <option value="Canton">Canton=州</option>
@@ -5270,7 +5270,7 @@
             国家&nbsp;
           </div>
           <div
-            data-tip="军事人员总数(考虑船员)。单击以进行排序"
+            data-tip="军事人员总数(考虑组员（Crew）)。单击以进行排序"
             id="militaryTotal"
             class="sortable icon-sort-number-down"
             data-sortby="total"
@@ -5352,7 +5352,7 @@
             名称&nbsp;
           </div>
           <div
-            data-tip="军事人员总数(不包括船员)。单击以进行排序"
+            data-tip="军事人员总数(不包括组员（Crew）)。单击以进行排序"
             id="regimentsTotal"
             class="sortable icon-sort-number-down"
             data-sortby="total"
@@ -5396,7 +5396,7 @@
                 <th style="width: 5em" data-tip="选择允许的宗教">宗教</th>
                 <th data-tip="农村人口征兵比例">农村</th>
                 <th data-tip="城市人口征兵比例">城市</th>
-                <th data-tip="船员平均人数(用于计算总人数)">船员</th>
+                <th data-tip="组员（Crew）平均人数(用于计算总人数)">组员（Crew）</th>
                 <th data-tip="单位军事力量(用于作战模拟)">力量</th>
                 <th data-tip="单位类型适用于重新计算力的特殊规则">类型</th>
                 <th data-tip="检查单元是否是独立的，是否只能与相同类型的单元堆叠">Sep.</th>
